# FuckWindows11

./: .gitignore  .gitmodules  Cargo.toml  Readme.md
projects/: download.sh
projects/onnx-protobuf/: Cargo.toml  build.rs
projects/onnx-protobuf/src/: attrs.rs  lib.rs  util.rs  utils.rs
projects/onnx-protobuf/src/protos/: mod.rs  onnx.rs
projects/safe-tensors-export/: Cargo.toml  Readme.md
projects/safe-tensors-export/src/: lib.rs  main.rs
projects/safe-tensors-export/src/convert/: mod.rs
projects/safe-tensors-load/: Cargo.toml
projects/safe-tensors-load/src/: lib.rs
projects/safe-tensors-load/src/onnx/: mod.rs
projects/safe-tensors-load/tests/: main.rs
projects/tensor-flow-protobuf/: Cargo.toml
projects/tensorflow-protobuf/: .gitignore  Cargo.toml
projects/tensorflow-protobuf/src/: lib.rs
projects/tensorflow-protobuf/src/protos/: attr_value.rs  full_type.rs  function.rs  graph.rs  mod.rs  node_def.rs  op_def.rs  resource_handle.rs  tensor.rs  tensor_shape.rs  types.rs  versions.rs
projects/tensorflow-protobuf/tests/: main.rs
