[package]
name = "onnx-protobuf"
version = "0.2.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "ONNX protocol buffers messages."
documentation = "https://docs.rs/onnx-protobuf"
homepage = "https://github.com/oovm/onnx-protocol"
repository = "https://github.com/oovm/onnx-protocol.git"

[dependencies]
protobuf = "3.2.0"
safetensors = { version = "0.3.0", optional = true }
