[package]
name = "safe-tensors-export"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
walkdir = "2.3.2"
globset = "0.4.10"

[dev-dependencies]

[features]
default = []
