[package]
name = "safe-tensors-export"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/safe-tensors-export"
documentation = "https://docs.rs/safe-tensors-export"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
walkdir = "2.3.2"
globset = "0.4.10"
log = "0.4.17"
env_logger = "0.10.0"
url = "2.3.1"

[dependencies.safe-tensors-loader]
path = "../safe-tensors-load"
version = "0.0.0"

[dev-dependencies]

[features]
default = []
