[package]
name = "safe-tensors-loader"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/safe-tensors-loader"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies.onnx-protobuf]
version = "0.2.0"
path = "../onnx-protobuf"


[dev-dependencies]
protobuf-codegen = "3.2.0"

[features]
default = []
