[package]
name = "safe-tensors-loader"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Load weights as safe tensors"
repository = "https://github.com/oovm/safe-tensors-export"
documentation = "https://docs.rs/safe-tensors-loader"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
safetensors = "0.3.0"
zip = "0.6.4"
serde-pickle = "1.1.1"

[dependencies.onnx-protobuf]
version = "0.2.1"
path = "../onnx-protobuf"
features = ["safetensors"]


[dev-dependencies]
protobuf-codegen = "3.2.0"

[features]
default = []
